<resources>

    <string name="app_name">Sri Lanka Vehicle Info</string>

    <!--Hansika Perera-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password_reset">Password Reset</string>
    <string name="footer_main">Department of Motor Traffic</string>
    <string name="footer_second">Sri Lanka</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="submit">SUBMIT</string>
    <string name="send_code">SEND CODE</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="tel_no">Telephone No</string>
    <string name="password">Password</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="new_pw">New Password</string>
    <string name="load_name">Vehicle Info</string>


    <string name="submitnumber">Submit Number</string>
    <string name="details">Vehicle Details</string>
    <string name="inputfield">Please Submit Vehicle Number to Proceed</string>
    <string name="inputfield2">Submitted Vehicle Details</string>
    <string name="textfield">Vehicle Registration Number</string>
    <string name="buttontext">SUBMIT</string>
    <string name="dmt">Department Of Motor Traffic</string>
    <string name="sri">Sri Lanka</string>
    <string name="owner">AB OWNER</string>
    <string name="engine">ENGINE NO</string>
    <string name="vclass">CLASS</string>
    <string name="make">MAKE</string>
    <string name="model">MODEL</string>
    <string name="yom">YOM</string>
    <string name="warning_title">Disclaimer</string>
    <string name="warning_text">The information provided in this service is only for your reference and should not be misused.</string>
    <string name="okey">OK</string>
    <string name="more_info">More Info</string>
    <string name="download">Download</string>

    <string name="footerval2">Sri Lanka</string>
    <string name="footerval1">Department Of Motor Traffic</string>
    <string name="subs_title">SUBSCRIBE</string>
    <string name="subs_btn">SUBSCRIBE</string>
    <string name="sub_name_hint">Full Name</string>
    <string name="sub_name_contact">Contact No</string>
    <string name="sub_name_mail">Email</string>
    <string name="sub_name_pwd">Password</string>
    <string name="sub_title2">Fill out to subscribe</string>
    <string name="subscribe_title_img">subTitle_img</string>
    <string name="subscribe_main_img">subscribe_main_img</string>

    <string name="alert_footer2">Sri Lanka</string>
    <string name="alert_footer1">Department Of Motor Traffic</string>
    <string name="alert_title">REVENUE LICENSE ALERT</string>
    <string name="alert_subscribe">Subscribe</string>
    <string name="alert_profile">Profile</string>
    <string name="alert_unsub">Unsubscribe</string>
    <string name="alert_description">Revenue License Alert allows you to get a text reminder for next Vehicle License Date. Simply register on app and subscribe on your alert service to get an alert on your next License Date.</string>

    <string name="profile_footer2">Sri Lanka</string>
    <string name="profile_footer1">Department Of Motor Traffic</string>
    <string name="profile_title">PROFILE</string>
    <string name="profile_name">Anupriya Karunarathne</string>
    <string name="profile_mail">anup@gmail.com</string>
    <string name="pro_email">Email</string>
    <string name="pro_contact">Contact Number</string>
    <string name="profile_contact">0773456321</string>
    <string name="pro_pwd">********</string>
    <string name="profile_image">profile_image</string>

    <string name="unsub_footerTitle2">Sri Lanka</string>
    <string name="unsub_footerTitle1">Department Of Motor Traffic</string>
    <string name="unsub_title">UNSUBSCRIBE</string>
    <string name="unsub_btn">UNSUBSCRIBE</string>
    <string name="unsub_contact">Contact No</string>
    <string name="unsub_pwd">Password</string>
    <string name="unsub_title_img">unsub_title_img</string>
    <string name="unsub_main_img">unsub_main_img</string>



</resources>